--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,3 @@
-input{
-    width: 100%;
-    padding: 120px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    background-color: #f8f8f8;
-    font-size: 16px;
+input[type="text"] {
+    padding: 150px;
 }
